--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,12 +120,15 @@
     "\n",
     "def distance(selected_individual, neighbor):\n",
     "   distance_squared = (neighbor['x'] - selected_individual['x'])**2 + (neighbor['y'] - selected_individual['y'])**2\n",
-    "   return math.sqrt(distance_squared)"
+    "   return math.sqrt(distance_squared)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors(bob, suzie)"
    ]
@@ -169,13 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))"
+    "    remaining_neighbors = filter(lambda neighbor: \n",
+    "                        neighbor != selected_individual, neighbors)\n",
+    "    return list(map(lambda neighbor: \n",
+    "            distance_between_neighbors(selected_individual, neighbor), \n",
+    "                    remaining_neighbors))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -194,31 +215,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_individual, neighbors, number = None):\n",
     "    number = number or len(neighbors)\n",
     "    neighbor_distances = distance_all(selected_individual, neighbors)\n",
-    "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: neighbor['distance'])\n",
+    "    sorted_neighbors = sorted(neighbor_distances, \n",
+    "                              key=lambda neighbor: neighbor['distance'])\n",
     "    return sorted_neighbors[:number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'x': 5, 'y': 4, 'distance': 4.123105625617661},\n",
+       " {'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Edgar', 'x': 6, 'y': 13, 'distance': 5.385164807134504}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(bob, neighbors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'x': 5, 'y': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'x': 3, 'y': 6, 'distance': 2.23606797749979}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(bob, neighbors, 2)"
    ]
@@ -264,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
